app/styles/layouts/_l-default.scss
// --------------------------------------------------
// Layout default
// --------------------------------------------------

//
// Basic page layout
// --------------------------------------------------

.site-header {
  background-color: $white;
  position: relative;
  z-index: 2;
  width: 100%;

  @include breakpoint(large) {
    position: fixed;
  }
}

// #main wraps everything except the header
#main {
  z-index: 1;
  position: relative;

  @include breakpoint(large) {
    padding-top: 97px
  //   height: calc(100vh - 97px);
  }
}

// #cd-chooser contains the map and search
#cd-chooser {
  position: relative;

  &::after {
    @include breakpoint(large) {
      content: '';
      position: absolute;
      z-index: 2;
      top: 0;
      right: 0;
      bottom: 0;
      left: auto;
      background-color: rgba(0,0,0,0.1);
      width: 4px;
      height: 100%;
    }
  }

  .mapboxgl-map {
    height: calc(50vh);
    width: 100%;
    z-index: 1;

    @include breakpoint(large) {
      position: fixed;
      top: rem-calc(97);
      bottom: 0;
      left: 0;
      width: 33.33333%;
      height: calc(100vh - 97px);
    }

    @include breakpoint(xlarge) {
      width: 25%;
    }
  }
}

#cd-search {
  position: absolute;
  z-index: 2;
  top: auto;
  right: $global-margin;
  bottom: $global-margin*2;
  left: $global-margin;

  @include breakpoint(large) {
    position: fixed;
    top: rem-calc(107);
    right: calc(66.66666% + 1rem);
    bottom: auto;
    left: rem-calc(60);
  }

  @include breakpoint(xlarge) {
    right: calc(75% + 1rem);
  }
}

// #page-content is everything in main not in #cd-chooser
#page-content {
  padding-top: $global-margin;
}

.district-header {
  background-color: $white;
  margin: 0 0 $global-margin;

  @include breakpoint(large) {
    position: fixed;
    top: rem-calc(97);
    right: 0;
    bottom: auto;
    left: 33.33333%;
    z-index: 2;
    padding: rem-calc(5) rem-calc(20) 0;

    @include breakpoint(xlarge) {
      left: 25%;
    }
  }
}

.district-content {
  position: relative;

  @include breakpoint(large) {
    top: rem-calc(97);
    margin-bottom: rem-calc(97);
  }
}

.page-section {
  position: relative;
  z-index: 1;
}

